<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BOCPlus</string>
    <string name="app_title">BOC+</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_one">交易历史</string>
    <string name="fragment_two">理财产品</string>
    <string name="fragment_three">众筹信息</string>
    <string name="accinfo_cm">银行卡管理</string>
    <string name="accinfo_pm">密码管理</string>
    <string name="accinfo_tl">交易额度</string>
    <string name="accinfo_ra">余额提醒</string>
    <string name="rmb">￥</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="setting">管理</string>
    <string name="str_card">银行卡</string>
    <string name="strpasswd">密码</string>
    <string name="str_chgestpsw">对手势密码进行修改</string>
    <string name="str_tradelimit">交易额度</string>
    <string name="str_remaintip">余额提醒</string>
    <string name="str_inputoriginpasswd">输入初始密码</string>
    <string name="str_newtradelimit">新的交易额度</string>
    <string name="str_tradelimithint">交易额度</string>
    <string name="defautcard">默认支付卡</string>
    <string name="othercards">其他银行卡</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="confirm">确认</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_error">"手势密码不对"</string><!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] --><string name="lockscreen_access_pattern_start">Pattern started</string><!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] --><string name="lockscreen_access_pattern_cleared">Pattern cleared</string><!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] --><string name="lockscreen_access_pattern_cell_added">Cell added</string><!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="str_logout">退出登陆</string>
    <string name="str_tradeinformationcomfirm">转账(支付)信息确认</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>
