<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/setting"
        android:layout_marginLeft="32dp"
        android:gravity="center_vertical"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="32dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/str_card"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2张"
            android:layout_marginTop="3dp"
            android:textSize="14sp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="32dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/strpasswd"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_chgestpsw"
            android:layout_marginTop="3dp"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginLeft="32dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/str_tradelimit"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2张"
        android:layout_marginTop="3dp"
        android:textSize="14sp"/>
</LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginLeft="32dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/str_remaintip"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2张"
        android:layout_marginTop="3dp"
        android:textSize="14sp"/>
</LinearLayout>


</LinearLayout>
