<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/actionbar_color"
        android:gravity="left"
        >
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/dialog_textsize"
            android:text="@string/str_newtradelimit"/>
    </LinearLayout>

    <com.hustunique.bocp.Utils.views.MaterialEditText
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/dialog_textsize"
        android:gravity="center"
        app:baseColor="@android:color/darker_gray"
        android:hint="请输入交易金额"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|right"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:textSize="@dimen/textbtn_size"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textColor="@android:color/holo_blue_bright"
            android:text="@string/cancel"/>
        <TextView
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:gravity="center"
            android:textSize="@dimen/textbtn_size"
            android:textColor="@android:color/holo_blue_bright"
            android:text="@string/confirm"/>

        </LinearLayout>

</LinearLayout>
