<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/actionbar_color"
        android:gravity="left"
        >
        <TextView
            android:id="@+id/gp_hint"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/common_text_size_middle"
            android:text="@string/str_tradeinformationcomfirm"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="转到"/>
        <TextView
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="123456789"/>
        </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="收款人姓名"/>
        <TextView
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="某某某"/>
    </LinearLayout>

    <LinearLayout

        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="转账金额"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Y30"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textSize="16sp"
        android:layout_gravity="bottom|right"
        android:textColor="@android:color/holo_blue_bright"
        android:text="@string/cancel"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:layout_gravity="bottom|right"
        android:textColor="@android:color/holo_blue_bright"
        android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>
